Add github login
